[package]
name = "code-graffiti"
version = "0.0.1"
authors = ["Daniel Wagner-Hall <dawagner@gmail.com>"]

[[bin]]
name = "cli"
path = "bin/cli.rs"

[[bin]]
name = "api"
path = "bin/api.rs"

[features]
orm = ["diesel", "r2d2-diesel"]
sql = ["postgres", "r2d2_postgres"]

[dependencies]
boxfuture = "0.0.1"
clap = "2.31.2"
env_logger = "0.5.10"
diesel = { version = "1.3.2", features = ["postgres"], optional = true }
futures = "0.1.21"
hyper = "0.12.5"
hyper-tls = "0.3"
lazy_static = "1"
log = "0.4"
postgres = { version = "0.15.2", optional = true }
r2d2 = "0.8.2"
r2d2-diesel = { version = "1", optional = true }
r2d2_postgres = {version = "0.14", optional = true }
regex = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_urlencoded = "0.5.1"
tokio = "0.1"
